# lab_3.v

UI/: CMakeLists.txt  UI.cpp  UI.h  domino.cpp  domino.h
main/: CMakeLists.txt  Readme  main.cpp
test/: CMakeLists.txt  test.cpp
